welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:2: error: not found: value FaceauMur
while(!FaceauMur){avance();}
       ^